--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <!-- Theme Color -->
     <meta name="theme-color" content="#0E0C15E6" />
     <!-- Description -->
-    <meta
-      name="description"
-      content="Modern Animated SaaS Generative AI Landing Page"
-    />
+    <meta name="description" content="ocr website" />
     <!-- Author -->
-    <meta name="author" content="Sanidhya Kr. Verma" />
+    <meta name="author" content="Soumalya Mukhopadhyay" />
 
     <!-- Keywords -->
     <meta
@@ -35,7 +32,7 @@
     />
 
     <!-- Title -->
-    <title>Brainwave</title>
+    <title>Ocrify</title>
   </head>
   <body>
     <div id="root"></div>
